--- a/menu.html
+++ b/menu.html
@@ -35,20 +35,20 @@
                         <td>Masala Chai</td>
                         <td>Spicy traditional Indian tea.</td>
                         <td><del>49* Rupees</del><b> 29* Rupees</b></td>
-                        <td><img src="images/istockphoto-614533094-612x612.jpg" alt="Masala Chai" width="100"></td>
+                        <td><img src="/images/istockphoto-614533094-612x612.jpg" alt="Masala Chai" width="100"></td>
                     </tr>
                     <tr>
                         <td>Tost</td>
                         <td>Crunchy toasted bread.</td>
                         <td><del>29* Rupees</del><b> 19* Rupees</b></td>
-                        <td><img src="images/download.jpg" alt="Tost" width="100"></td>
+                        <td><img src="/images/download.jpg" alt="Tost" width="100"></td>
                     </tr>
                     <!--one tost here-->
                      <tr>
                         <td>Instant-Coffee</td>
                         <td>Coffee make your day.</td>
                         <td><del>49* Rupees</del><b> 39* Rupees</b></td>
-                        <td><img src="images/images.jpg" alt="Tost" width="100"></td>
+                        <td><img src="/images/images.jpg" alt="Tost" width="100"></td>
                     </tr>
                     <tr>
                         <td>Cold-Coffee</td>
